--- a/serve/index.html
+++ b/serve/index.html
@@ -7,6 +7,7 @@
     <title>EpKit</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.min.css">
+    <script src="./res/epub.min.js"></script>
     <script defer src="./js/script.js"></script>
 </head>
 <body>
@@ -16,6 +17,8 @@
     <div class="book-wrapper">
         <div id="viewer" class="book-container"></div>
     </div>
+    <aside>
+    </aside>
     <footer>
         <button class="book__nav-btn" id="ctrlPrev">Prev</button>
         <button class="book__nav-btn" id="ctrlNext">Next</button>
